fix(web): fixes overflow issue with HomeProjects appear animation

--- a/web/src/styles/index.css
+++ b/web/src/styles/index.css
@@ -626,12 +626,16 @@ button {
   margin-bottom: -0.5rem;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
 .-mb-2 {
   margin-bottom: -0.5rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
 }
 
 .mt-2 {
@@ -652,14 +656,6 @@ button {
 
 .mb-24 {
   margin-bottom: 6rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mr-2 {
-  margin-right: 0.5rem;
 }
 
 .block {
@@ -905,6 +901,10 @@ button {
 
 .pr-20 {
   padding-right: 5rem;
+}
+
+.pb-20 {
+  padding-bottom: 5rem;
 }
 
 .text-left {
